<resources>
    <string name="app_name">StoryApp</string>
    <string name="no_validate_email">Silahkan isi alamat email dengan benar!</string>
    <string name="password_validete">Isikan password lebih dari 6 digit!</string>
    <string name="add_photo">Add Photo</string>
    <string name="tv_register">Register</string>
    <string name="masuk">Masuk</string>
    <string name="write_password">Silahkan isi password anda</string>
    <string name="password">Password</string>
    <string name="write_email">Silahkan isi email anda</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="story_app">Story App</string>
    <string name="example_account_user">Image Account</string>
    <string name="daftar">Daftar</string>
    <string name="write_username">Silahkan isi username anda</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="splash_screen_tv">Splash Screen</string>
    <string name="story_image">Story Image</string>
    <string name="back">Back to List</string>
    <string name="galery">Galery</string>
    <string name="camera">Camera</string>
    <string name="image_desripsi">Isi descripsi gambar anda</string>
    <string name="upload">Upload</string>
    <string name="logout">logout</string>
    <string name="connection_error">Connection Error</string>
    <string name="trouble_connection">Koneksi sedang bermasalah\nsilahkan hidupkan data anda</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="storyItemNumber">item ke %s</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">Empty Text</string>
    <string name="update_stories">Update Stories</string>
    <string name="btn_ok">OK</string>
    <string name="upload_message_succed">Gambar Berhasil di Upload ke Server</string>
    <string name="retry">Coba Lagi</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="widget_image">WidgetImage</string>

    <string name="logout_message">Anda yakin ingin Logout?</string>
</resources>