<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/circle_bg_popup">

    <ImageView
        android:id="@+id/img_succedd"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_message_succedd"
        android:contentDescription="@string/add_photo"/>

    <TextView
        android:id="@+id/message_succedd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/upload_message_succed"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_succedd"
        android:fontFamily="@font/passion_one"
        android:layout_marginTop="18dp"
        android:textAlignment="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_succedd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/bg_blue"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/btn_ok"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple" />

</RelativeLayout>